--- a/Ex05.md
+++ b/Ex05.md
@@ -1,7 +1,7 @@
-# Ex. No : 5	
+# Ex. No: 5	
 # RECOGNITION OF A VALID ARITHMETIC EXPRESSION THAT USES
-## Register Number :
-## Date : 
+## Register Number :21223240157
+## Date : 06.03.2024
 
 ## AIM   
 To write a yacc program to recognize a valid arithmetic expression that uses operator +,- ,* and /.
@@ -17,9 +17,38 @@ To write a yacc program to recognize a valid arithmetic expression that uses ope
 8.	Enter an arithmetic expression as input and the tokens are identified as output.
 
 ## PROGRAM
-
+```
+%{ 
+#include <stdio.h> 
+/* This YACC program is for recognizing the Expression */ 
+%} 
+%token A ID 
+%% 
+statement: A'='E 
+| E { 
+printf("\n Valid arithmetic expression"); 
+$$=$1; 
+} 
+; 
+  E: E'+'ID 
+| E'-'ID 
+| E'*'ID 
+| E'/'ID 
+| ID 
+; 
+%% 
+extern FILE*yyin; 
+int main() { 
+do { 
+yyparse(); 
+}while(!feof(yyin)); } 
+yyerror(char*s) 
+{ 
+}
+```
 
 ## OUTPUT 
+![image](https://github.com/guru14789/19CS409-Compiler-Design-Lab/assets/151705853/2c9506d9-4567-4a20-85c0-e40926720c35)
 
 ## RESULT
 A YACC program to recognize a valid arithmetic expression that uses operator +,-,* and / is executed successfully and the output is verified.
