--- a/Ex06.md
+++ b/Ex06.md
@@ -1,10 +1,10 @@
-# Ex. No : 6	
-# RECOGNITION OF A VALID VARIABLE WHICH STARTS WITH A LETTER FOLLOWED BY ANY NUMBER OF LETTERS OR DIGITS USING YACC
-## Register Number :
-## Date : 
+# Ex. No: 6	
+# RECOGNITION OF A VALID VARIABLE THAT STARTS WITH A LETTER FOLLOWED BY ANY NUMBER OF LETTERS OR DIGITS USING YACC
+## Register Number: 212223240157
+## Date : 13.03.2024
 
 ## AIM   
-To write a YACC program to recognize a valid variable which starts with a letter followed by any number of letters or digits.
+To write a YACC program to recognize a valid variable that starts with a letter followed by any number of letters or digits.
 
 ## ALGORITHM
 1.	Start the program.
@@ -17,9 +17,59 @@ To write a YACC program to recognize a valid variable which starts with a letter
 8.	Enter a statement as input and the valid variables are identified as output.
 
 ## PROGRAM
+```
+%{
+/* This LEX program returns the tokens for the Expression */
+#include"y.tab.h"
+%}
+%%
+"int" {return INT;}
+"float" {return FLOAT;}
+"double" {return DOUBLE;}
+[a-zA-Z]*[0-9]* {printf("\nIdentifier is %s",yytext);
+return ID;
+}
+. return yytext[0];
+\n return 0;
+%%
+int yywrap()
+{
+return 1;
+}
+Program name:ex6.y
+%{
+#include<stdio.h>
+/* This YACC program is for recognising the Expression*/
+ %}
+%token ID INT FLOAT DOUBLE
+%%
+D: T L
+;
+L: L,ID
+| ID
+;
+T: INT
+| FLOAT
+| DOUBLE
+;
+%%
+extern FILE*yyin;
+main()
+{
+do
+{
+yyparse();
+}while(!feof(yyin));
+}
+yyerror(char*s)
+{
+}
+```
 
 
 ## OUTPUT 
+![image](https://github.com/guru14789/19CS409-Compiler-Design-Lab/assets/151705853/46a39a71-10f9-4789-b319-6633bc6d87a3)
+
 
 ## RESULT
 A  YACC program to recognize a valid variable which starts with a letter followed by any number of letters or digits is executed successfully and the output is verified.
